--- a/HackerRankCore/HackerRankCore.csproj
+++ b/HackerRankCore/HackerRankCore.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{4DBECCEA-68F0-4123-AE2D-C9FF2DBDF6C8}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>HackerRankMain</RootNamespace>
-    <AssemblyName>HackerRankMain</AssemblyName>
+    <RootNamespace>HackerRankCore</RootNamespace>
+    <AssemblyName>HackerRankCore</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
